Modification de l'entité Utilisateur et de son controleur pour intégrer les préférences du conducteur
